Remove the Java class that I couldn't get to load correctly in order to simplify extending this.

--- a/README.textile
+++ b/README.textile
@@ -8,4 +8,8 @@ h2. Requirements
 
 @gem install bossman@
 
-@javac -cp `echo lib/*jar | tr ' ' :` Ranker.java@
+h2. Running the ranker
+
+1. Get a Yahoo API key
+2. Copy config.yml.example to config.yml and add in your key
+3. ruby graph.rb 'New York'
