--- a/README.textile
+++ b/README.textile
@@ -5,11 +5,10 @@ Spider the social graph of a geographic subset of GitHub users and rank them by 
 h2. Requirements
 
 @JRuby@
-
 @gem install bossman@
 
 h2. Running the ranker
 
-1. Get a Yahoo API key
-2. Copy config.yml.example to config.yml and add in your key
-3. ruby graph.rb 'New York'
+# Get a Yahoo API key (https://developer.apps.yahoo.com/wsregapp/)
+# Copy config.yml.example to config.yml and add in your key
+# ruby graph.rb 'New York'
